--- a/web/templates/problem.html
+++ b/web/templates/problem.html
@@ -6,6 +6,23 @@
         </title>
     </head>
     <body>
-        {{ problem.description }}
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div>
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        <div id="submission">
+            <form method="post" action="/problems/{{ problem.id }}/submit" enctype="multipart/form-data">
+                <input type="file" name="file">
+                <input type="submit" value="upload">
+            </form>
+        </div>
+        <div id="description">
+            {{ problem.description }}
+        </div>
     </body>
 </html>
