--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -6,11 +6,15 @@
         </title>
     </head>
     <body>
-        {% if failed %}
-        <div>
-            Login failed...
-        </div>
-        {% endif %}
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div>
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         <form action="/login" method="post">
             <label for="uid">uid: </label>
             <input type="text" name="uid">
