--- a/web/templates/problem.html
+++ b/web/templates/problem.html
@@ -6,14 +6,12 @@
         </title>
     </head>
     <body>
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                    <div>
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            {% endif %}
+        {% with messages = get_flashed_messages(with_categories=false) %}
+        {% if messages %}
+        {% for message in messages %}
+        <div>{{ message }}</div>
+        {% endfor %}
+        {% endif %}
         {% endwith %}
         <div id="submission">
             <form method="post" action="/problems/{{ problem.id }}/submit" enctype="multipart/form-data">
@@ -21,8 +19,6 @@
                 <input type="submit" value="upload">
             </form>
         </div>
-        <div id="description">
-            {{ problem.description }}
-        </div>
+        <div id="description">{{ problem.description }}</div>
     </body>
 </html>
