use abort to check logins

--- a/web/templates/result.html
+++ b/web/templates/result.html
@@ -24,6 +24,7 @@
         </table>
         {% else %}
         The result is not ready yet...
+        <meta http-equiv="refresh" content="1">
         {% endif %}
     </body>
 </html>
