--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -7,13 +7,11 @@
     </head>
     <body>
         {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                    <div>
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            {% endif %}
+        {% if messages %}
+        {% for category, message in messages %}
+        <div>{{ message }}</div>
+        {% endfor %}
+        {% endif %}
         {% endwith %}
         <form action="/login" method="post">
             <label for="uid">uid: </label>
