--- a/web/templates/result.html
+++ b/web/templates/result.html
@@ -1,30 +1,26 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Result</title>
-    </head>
-    <body>
-        {% if result.ready %}
-        <div>
-            Score: {{ result.score }}/{{ result.weight }}
-        </div>
-        <table>
-            <tr>
-                <th>Name</th>
-                <th>Verdict</th>
-                <th>Score</th>
-            </tr>
-            {% for subtask in result.subtasks %}
-            <tr>
-                <td>{{ subtask.name }}</td>
-                <td>{{ subtask.verdict }}</td>
-                <td>{{ subtask.score }}/{{ subtask.weight }}</td>
-            </tr>
-            {% endfor %}
-        </table>
-        {% else %}
-        The result is not ready yet...
-        <meta http-equiv="refresh" content="1">
-        {% endif %}
-    </body>
-</html>
+{% extends 'base.html' %}
+{% block title %}Result{% endblock %}
+{% block body %}
+{% if result.ready %}
+<div class="container mt-3">
+    <p class="h3">Score: {{ result.score }} / {{ result.weight }}</p>
+</div>
+<table class="table">
+    <tr>
+        <th>Name</th>
+        <th>Verdict</th>
+        <th>Score</th>
+    </tr>
+    {% for subtask in result.subtasks %}
+    <tr>
+        <td>{{ subtask.name }}</td>
+        <td>{{ subtask.verdict }}</td>
+        <td>{{ subtask.score }} / {{ subtask.weight }}</td>
+    </tr>
+    {% endfor %}
+</table>
+{% else %}
+The result is not ready yet...
+<meta http-equiv="refresh" content="1">
+{% endif %}
+{% endblock %}
