--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -35,7 +35,7 @@
                     {% endfor %}
                 {% endif %}
             {% endwith %}
-            <div class="container col-10">
+            <div class="container col-10 mt-3">
                 {% block body %}
                 {% endblock %}
             </div>
