--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -4,6 +4,18 @@
         {% block head %}
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+        <style>
+            table.table-fit {
+                width: auto !important;
+                table-layout: auto !important;
+            }
+            table.table-fit thead th, table.table-fit tfoot th {
+                width: auto !important;
+            }
+            table.table-fit tbody td, table.table-fit tfoot td {
+                width: auto !important;
+            }
+        </style>
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -48,6 +60,9 @@
             });
             for (let item of document.getElementsByClassName('markdown')) {
                 item.innerHTML = marked.parse(item.innerHTML);
+                for (let table of item.getElementsByTagName('table')) {
+                    table.classList.add('table', 'table-striped', 'table-bordered', 'table-fit');
+                }
             }
         </script>
     </body>
