--- a/web/templates/problem.html
+++ b/web/templates/problem.html
@@ -11,7 +11,7 @@
             <input type="file" name="file" class="form-control">
         </div>
         <div class="col-auto">
-            <button type="submit" class="btn btn-primary">Upload</button>
+            <button type="submit" class="btn btn-primary" {% if not problem.available %}disabled{% endif %}>Upload</button>
         </div>
     </form>
 </div>
