--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -4,6 +4,7 @@
         {% block head %}
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
         <style>
             table.table-fit {
                 width: auto !important;
@@ -24,19 +25,20 @@
     <body>
         <nav class="navbar navbar-expand-sm bg-secondary navbar-dark">
             <div class="container-fluid">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link disabled text-light" href="#">SP OJ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/problems">Problems</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav navbar-right">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/logout">Logout</a>
-                    </li>
-                </ul>
+                <a class="navbar-brand" disabled>SP OJ</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsedNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsedNavbar">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/problems">Problems</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout">Logout</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
         <div class="container">
