--- a/web/templates/problems.html
+++ b/web/templates/problems.html
@@ -12,12 +12,14 @@
             <th scope="col">ID</th>
             <th scope="col">Name</th>
             <th scope="col">Deadline</th>
+            <th scope="col">Quota</th>
         </tr>
         {% for problem in problems %}
         <tr>
             <th scope="row">{{ problem.id }}</td>
             <td><a class="link-primary" href="/problems/{{ problem.id }}">{{ problem.name }}</a></td>
             <td>{{ problem.deadline.strftime('%Y-%m-%d %H:%M') }}</td>
+            <td>{{ getQuota(problem.id, user.uid) }}</td>
         </tr>
         {% endfor %}
     </table>
